...
        else -> "?"
    }
    
    // Warnings
    val hasWarning = warnings.any { 
        !it.contains("Choose Not To Use Archive Warnings", ignoreCase = true) && 
        !it.contains("No Archive Warnings Apply", ignoreCase = true)
    }
    
    val semanticDesc = if (announcesToVoiceOver) {
        val wDesc = if (hasWarning) "Has archive warnings" else "No archive warnings"
        val cDesc = if (isComplete) "Complete" else "In progress"
        "Rating: $rating, Categories: ${categories.joinToString()}, $wDesc, $cDesc"
...
